# pygeoapi

./: $PYGEOAPI_OPENAPI  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .toml  .travis.yml  .trivyignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-ip  Dockerfile2  DockerfileMobiitydb  Dockerfile_bookworm  Dockerfile_condensed  Dockerfile_multi_run  Dockerfile_multi_stage  Dockerfile_perfect  LICENSE  LICENSE.md  MANIFEST.in  README.md  README_serverless.md  SECURITY.md  async.yml  babel-mapping.ini  catalog-info.yaml  config-gdp.yml  config.yaml  data_transaction_openapidoc_proposal.yml  docker-compose.yml  example-config.yml  example-openapi.yml  flask_app.py  index.html  indoorfeature_api.bundled.yml  indoorgmlapi_bundled.yaml  indoorgmlapi_bundled2.yaml  (+39 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.security/: description.yaml
aws-lambda/: .gitignore  README.md  pygeoapi-serverless-config.yml  serverless.yml  zappa_settings.json
data/: IndoorGML_openAPI.yml  PNU-201.json  PNU-201_2D_geom.json  PNU-201_with_weight.json  PNU-201_with_weight_and_2D.json  indoorjson_schema.json  indoorjson_viewer_directed.html  indoorjson_viewer_new.html  indoorjson_viewer_new_with_cursor.html  indoorjson_viewer_not_directed.html  indoorjson_viewer_preview_v5.html  sample_collection.json  sample_indoor.json  sample_thematic.json  thematiclayer_schema.json
database/: init.sql
debian/: changelog  control  copyright  rules
docker/: Dockerfile  README.md  default.config.yml  docker-compose.yml  entrypoint.sh  initdb-mobilitydb.sh  oci.config.yml  poc.config.yml
docs/: ASYNC_IMPLEMENTATION.md  Makefile  async-deployment.md  requirements.txt
helm/: README.md
locale/: README.md  readme.md
logo/: README.md
openAPI/: IndoorGML_openAPI.yml  indoorgmlapi_bundled.yaml
presentation/: README.md  index.html  lightning.html
pygeoapi/: __init__.py  admin.py  api.py  app.py  asgi_app.py  asyncapi.py  catalogue.py  config.py  cql.py  cql_evaluate.py  cql_exception.py  cql_filters.py  cql_where_clauses.py  crs.py  date_time.py  error.py  (+22 more)
(+1010 files in other folders)
